Prepare for Heroku push

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "start": "webpack --watch --mode=development",
     "postinstall": "webpack"
   },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vickiychung/Mockify.git"
